[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/UI/player_healthbar/PlayerHealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scripts/AnimationMachine.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/SoundMachine.gd" type="Script" id=3]
[ext_resource path="res://src/entities/base_templates/base_entity/functions/SpriteDirectionManager.gd" type="Script" id=4]
[ext_resource path="res://addons/mixing-desk/sound/2d/ran_cont.gd" type="Script" id=5]
[ext_resource path="res://src/scripts/StatesMachine.gd" type="Script" id=6]
[ext_resource path="res://src/entities/base_templates/base_entity/functions/HealthManager.gd" type="Script" id=7]
[ext_resource path="res://src/entities/base_templates/base_entity/PhysicsColliderDefault.tres" type="Shape2D" id=8]
[ext_resource path="res://src/entities/base_templates/base_entity/base_entity.gd" type="Script" id=9]
[ext_resource path="res://sounds/hit/EFX SD Heads Hit Together 02.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/hit/Ilmarinen,blacksmith,forge,hammer,anvil,strike,loose,ringing,splash,iron,thin.M.wav" type="AudioStream" id=11]

[sub_resource type="VisualShaderNodeColorConstant" id=1]

[sub_resource type="VisualShaderNodeTexture" id=2]
source = 2

[sub_resource type="VisualShaderNodeVectorOp" id=3]
operator = 6

[sub_resource type="VisualShaderNodeVectorOp" id=4]
operator = 2

[sub_resource type="VisualShaderNodeBooleanUniform" id=5]
uniform_name = "active"

[sub_resource type="VisualShader" id=6]
code = "shader_type canvas_item;
uniform bool active;



void vertex() {
// Output:0

}

void fragment() {
// Texture:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 _tex_read = texture(TEXTURE , UV.xy);
		n_out3p0 = _tex_read.rgb;
		n_out3p1 = _tex_read.a;
	}

// BooleanUniform:9
	bool n_out9p0 = active;

// Color:11
	vec3 n_out11p0 = vec3(1.000000, 1.000000, 1.000000);
	float n_out11p1 = 1.000000;

// VectorOp:6
	vec3 n_out6p0 = vec3(n_out9p0 ? 1.0 : 0.0) * n_out11p0;

// VectorOp:5
	vec3 n_out5p0 = max(n_out3p0, n_out6p0);

// Output:0
	COLOR.rgb = n_out5p0;
	COLOR.a = n_out3p1;

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1040, 60 )
nodes/fragment/3/node = SubResource( 2 )
nodes/fragment/3/position = Vector2( 600, -40 )
nodes/fragment/5/node = SubResource( 3 )
nodes/fragment/5/position = Vector2( 860, -60 )
nodes/fragment/6/node = SubResource( 4 )
nodes/fragment/6/position = Vector2( 600, 100 )
nodes/fragment/9/node = SubResource( 5 )
nodes/fragment/9/position = Vector2( 400, 0 )
nodes/fragment/11/node = SubResource( 1 )
nodes/fragment/11/position = Vector2( 400, 120 )
nodes/fragment/connections = PoolIntArray( 3, 1, 0, 1, 3, 0, 5, 0, 6, 0, 5, 1, 5, 0, 0, 0, 9, 0, 6, 0, 11, 0, 6, 1 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/active = false

[node name="BaseEntity" type="KinematicBody2D" groups=["ENTITY"]]
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": "Collision Layers/Masks are ONLY used for PHYSICS
Kinematic Bodies ONLY INTERACT with other Kinematic Bodies or Physics Objects (Not hitboxes, hurtboxes)"
}

[node name="Functions" type="Node" parent="."]

[node name="HealthManager" type="Node" parent="Functions"]
script = ExtResource( 7 )
max_health = 10.0

[node name="SpriteDirectionManager" type="Node" parent="Functions"]
script = ExtResource( 4 )

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
rotation = -1.5708
shape = ExtResource( 8 )

[node name="Areas" type="Node2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="Areas"]
collision_layer = 0
collision_mask = 0
__meta__ = {
"_editor_description_": "Only has collision LAYER, no MASK. Respectively to the entity type

The hurtbox doesn't LOOK for anything, it is the one BEING LOOKED AT."
}

[node name="HurtboxShape" type="CollisionShape2D" parent="Areas/Hurtbox"]

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Visuals"]
material = SubResource( 7 )

[node name="AnimationMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )

[node name="SoundMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Damage" type="Node2D" parent="SoundMachine"]
script = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SoundMachine/Damage"]
stream = ExtResource( 10 )

[node name="Pain" type="Node2D" parent="SoundMachine"]
script = ExtResource( 5 )

[node name="Death" type="Node2D" parent="SoundMachine"]
script = ExtResource( 5 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="SoundMachine/Death"]
stream = ExtResource( 11 )

[node name="Footstep" type="Node2D" parent="SoundMachine"]
script = ExtResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 1 )]

[node name="Debug" type="Node2D" parent="."]
